--- a/analysis/manuscript.Rmd
+++ b/analysis/manuscript.Rmd
@@ -808,7 +808,7 @@ The varying degrees of adoption of open access across the three major publishers
 Springer Nature, for example, started offering open access agreements for its hybrid journal portfolio to selected consortia such as the Max Planck Society, the Swedish Bibsam Consortium and the Finnish FinELib consortium in 2015 under the name Springer Compact[^springercompact]. 
 Prior to this, Springer had some pilot agreements with a small number of institutions, including the University of Göttingen [@Schmidt_2012].
 However, the Springer Compact agreements were not included in the data as they concluded before the start of the transformative agreement data collection in June 2021. 
-Nonetheless, the results demonstrate the importance of agreements for Springer Nature's hybrid open access business over the past five years (Figure 2B).
+Nonetheless, the results demonstrate the importance of agreements for Springer Nature's hybrid open access business over the past five years (Figure \ref{fig:publisher_figure}).
 In 2022, `r publisher_summary_df |> filter(cr_year == "2022", publisher == "Springer Nature", type == "ta_oa") |> pull(value) / publisher_summary_df |> filter(cr_year == "2022", publisher == "Springer Nature") |> pull(value) |> sum()*100`% (n = `r  publisher_summary_df |> filter(cr_year == "2022", publisher == "Springer Nature", type == "ta_oa") |> pull(value)`) of open access in Springer Nature hybrid journals was enabled through transformative agreements.
 In the same year, `r publisher_summary_df |> filter(cr_year == "2022", publisher == "Wiley", type == "ta_oa") |> pull(value) / publisher_summary_df |> filter(cr_year == "2022", publisher == "Wiley") |> pull(value) |> sum()*100`% (n = `r publisher_summary_df |> filter(cr_year == "2022", publisher == "Wiley", type == "ta_oa") |> pull(value)`) of Wiley's open access articles could be linked to transformative agreements in 2022. 
 By contrast, Elsevier published fewer than half of its open access articles through transformative agreements (n = `r publisher_summary_df |> filter(cr_year == "2022", publisher == "Elsevier", type == "ta_oa") |> pull(value) `; `r publisher_summary_df |> filter(cr_year == "2022", publisher == "Elsevier", type == "ta_oa") |> pull(value) / publisher_summary_df |> filter(cr_year == "2022", publisher == "Elsevier") |> pull(value) |> sum()*100`%).  
